--- a/index.html
+++ b/index.html
@@ -1,1 +1,10 @@
-<p> Hello, world! </p>
+<!DOCTYPE html>
+<html lang="en">
+ <head>
+   <meta charset="utf-8" />
+   <title>PRIDEIT.net</title>
+  </head>
+  <body id="home">
+    <p>PRIDEIT</p>
+  </body>
+</html>
