--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
    <title>PRIDEIT.net</title>
   </head>
   <body id="home">
-    <p>PRIDEIT</p>
+    <h1>PRIDEIT</h1>
+    <p>Welcome to prideit.net!</p>
   </body>
 </html>
