Update index.html created style.css update PRIDEIT.png

--- a/index.html
+++ b/index.html
@@ -3,10 +3,20 @@
  <head>
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <meta charset="utf-8" />
+   <link rel="stylesheet" href="style.css">
    <title>PRIDEIT.net</title>
   </head>
   <body id="home">
-    <h1>PRIDEIT</h1>
-    <p>Welcome to prideit.net!</p>
+    <header>
+      <div class="overlay">
+        <img src="images/PRIDEIT.png" alt="PRIDEIT" class="logo"</img>
+        <h3>"Professional Responsibility In Delivering Excellence In Time"</h3>
+      </div>
+    </header>
+    <div class="main-body">
+      <p>PRIDEIT is a fast and reliable courier service operating in Victoria, Australia.</p>
+      <br>
+      <button>CLICK HERE TO FIND OUT MORE</button>
+    </div>
   </body>
 </html>
