--- a/index.html
+++ b/index.html
@@ -14,9 +14,10 @@
       </div>
     </header>
     <div class="main-body">
-      <p>PRIDEIT is a fast and reliable courier service operating in Victoria, Australia.</p>
+      <p>PRIDEIT was a fast and reliable courier service that operated in Victoria, Australia.</p>
+     <p>It is now no longer in business.</p>
       <br>
-      <button>CLICK HERE TO FIND OUT MORE</button>
+      <button>AND THIS BUTTON DOES NOTHING!</button>
     </div>
   </body>
 </html>
